--- a/package.json
+++ b/package.json
@@ -12,7 +12,16 @@
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Luis Gallego",
+  "contributors": [
+    {
+      "name": "Luis Gallego",
+      "email": ""
+    },
+    {
+      "name": "Juan Carlos Alonso Valenzuela",
+      "email": "javalenzuela@us.es"
+    }
+  ],
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
