Deployment only when tests work

--- a/.github/workflows/okteto-deployment.yml
+++ b/.github/workflows/okteto-deployment.yml
@@ -6,7 +6,10 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+  test:
+    uses: NFTsMarket/Catalogue-service/.github/workflows/tests.yml@main
+  deploy:
+    needs: test
     runs-on: ubuntu-latest
 
     steps:
