--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   },
   "contributors": [
     {
-      "name": "Luis Gallego",
-      "email": ""
+      "name": "Luis Gallego Ledesma",
+      "email": "luigalled1@alum.us.es"
     },
     {
       "name": "Juan Carlos Alonso Valenzuela",
