--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "homepage": "https://github.com/NFTsMarket/Catalogue-service",
   "scripts": {
     "start": "node index.js",
-    "test": "jest"
+    "test": "jest",
+    "integration:": "jest -c jest.integration.config.js"
   },
   "contributors": [
     {
