--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   ],
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/pubsub": "^2.18.4",
     "express": "^4.17.2",
     "mongoose": "^6.1.4",
     "nedb": "^1.8.0"
