--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -32,6 +32,15 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+    - name: Make envfile
+      uses: iamsauravsharma/create-dotenv@v1.2.0
+      env:
+        GOOGLE_PROJECT_ID: ${{ secrets.SECRET_KEY}}
+        GOOGLE_PRIVATE_KEY: ${{ secrets.CLIENT_ID}}
+        GOOGLE_CLIENT_EMAIL: ${{ secrets.CLIENT_SECRET}}
+        # REFRESH_TOKEN: ${{ secrets.REFRESH_TOKEN}}
+        # SAMPLE_JWT: ${{ secrets.SAMPLE_JWT}}
+    - run: npm install -g npm
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
