--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -35,9 +35,9 @@ jobs:
     - name: Make envfile
       uses: iamsauravsharma/create-dotenv@v1.2.0
       env:
-        GOOGLE_PROJECT_ID: ${{ secrets.SECRET_KEY}}
-        GOOGLE_PRIVATE_KEY: ${{ secrets.CLIENT_ID}}
-        GOOGLE_CLIENT_EMAIL: ${{ secrets.CLIENT_SECRET}}
+        GOOGLE_PROJECT_ID: ${{ secrets.GOOGLE_PROJECT_ID}}
+        GOOGLE_PRIVATE_KEY: ${{ secrets.GOOGLE_PRIVATE_KEY}}
+        GOOGLE_CLIENT_EMAIL: ${{ secrets.GOOGLE_CLIENT_EMAIL}}
     - run: npm install -g npm
     - run: npm ci
     - run: npm run build --if-present
