--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -38,6 +38,7 @@ jobs:
         GOOGLE_PROJECT_ID: ${{ secrets.GOOGLE_PROJECT_ID}}
         GOOGLE_PRIVATE_KEY: ${{ secrets.GOOGLE_PRIVATE_KEY}}
         GOOGLE_CLIENT_EMAIL: ${{ secrets.GOOGLE_CLIENT_EMAIL}}
+        SECRET_KEY: ${{ secrets.SECRET_KEY }}
     - run: npm install -g npm
     - run: npm ci
     - run: npm run build --if-present
